--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,10 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "async": "^1.4.2",
     "express": "4.10.1",
     "morgan": "1.4.1",
     "opencv": "^3.2.0",
-    "request": "^2.61.0",
     "socket.io": "1.2.1"
   }
 }
